# CDIxx_old

./: .gitignore  CMakeLists.txt  Makefile  README  applyMod.cu  cdi.cu  env.sh  merge.cu
config/: cdi.cfg  ptycho.cfg
gnuplot_script/: epslatex.dem  run.sh
include/: applyMod.h  common.h  cuPlotter.h  cudaConfig.h  cudaDefs.h  experimentConfig.h  fftw.h  format.h  imageReader.h  initCuda.h  matrixGen.h  memManager.h  mnistData.h  monoChromo.h  plotter.h  readCXI.h  readConfig.h  sparse.h  tvFilter.h
src/common/: common.cc  format.cc  imageReader.cc  memManager.cc  mmio.c  readCXI.cc  readConfig.cc  sparse.cc  write.cc
src/cpu/: fftw.cc  tvFilter.cpp
src/gpu/: cuPlotter.cc  cuPlotter.cu  cudaConfig.cu  cudaDefs.cu  experimentConfig.cu  fftw.cu  matrixGen.cu  mnistData.cu  monoChromo.cu  tvFilter.cu
src/gpu_ext/: fftw.cu  matrixGen.cu
src/torch/: mnistData.cc
src/vtk/: WriteVTI.cc
test/: guessFunc.txt  mlFunc.txt  originalFunc.txt
util/: DisplayImage.cpp  TG.cpp  TG.cu  TVFilter.cpp  beamGenerator.cpp  cdi.cpp  cdi.cu  example.cpp  fft.cpp  gaussionFFT.cpp  matrixElementGen.cpp  matrixMono.cpp  mkborder.cpp  multiWLSolver.cpp  ptycho.cu  pulseGen.cpp  pulseGen.cu  readCCDResponse.cpp  readCXI.cpp  readHj.cu  smoothing.cpp  sparseSolver.cpp  stacker.cpp  test.cpp  testVtk.cpp  testmatrixGen.cpp
