cmake_minimum_required(VERSION 3.22)
project( DisplayImage )
find_package( OpenCV REQUIRED )
message(${OpenCV_INCLUDE_DIRS})
message(${OpenCV_LIBS})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
include_directories( ${OpenCV_INCLUDE_DIRS} )
file( GLOB APP_SOURCES RELATIVE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/util/* )
foreach( sourcefile ${APP_SOURCES} )
    string( REPLACE ".cpp" "_run" exename ${sourcefile} )
    string( REPLACE "util/" "" exename ${exename} )
    add_executable( ${exename} ${sourcefile})
	target_link_libraries(${exename} ${OpenCV_LIBS} fftw3)
endforeach( sourcefile ${APP_SOURCES} )
